# stmsn-dlt

./: .gitignore  README.md  pyproject.toml  test_fixes.py  test_validation.py
.dlt/: config.toml
clients/: __init__.py  arcgis.py  arcgis_metadata.py  webfile.py
config/: arcgis_datasets.yaml  webfiles_datasets.yaml
pipelines/: __init__.py  arcgis.py  webfiles.py
ref/: arcgis.md
scripts/: check_geoparquet.py  convert_to_parquet.py  upload_legacy_to_gcs.py
utils/: data_validator.py  file_parsers.py  geoparquet_finalizer.py  load_history.py
