[project]
name = "stmsn-dlt"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dlt[gcp,duckdb]>=1.18.2",
    "geopandas>=1.1.1",
    "openpyxl>=3.1.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
    "shapely>=2.0.0",
]

[tool.setuptools]
packages = ["clients", "pipelines", "utils"]

[tool.uv]
package = true
